--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   font-size: 16px;
+  font-family: sans-serif;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
   position: relative;
   display: flex;
   background-color: #0065CC;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Montserrat', 'Arial', sans-serif;
   font-weight: 800;
   font-size: 10rem;
   color: #fff;
@@ -39,7 +40,7 @@ body {
   grid-column: 1 / -1;
   padding-top: 3rem;
   background-color: #0065CC;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   font-weight: 800;
   font-size: 4rem;
   text-transform: uppercase;
@@ -53,7 +54,9 @@ body {
 .header-title {
   margin: 0;
   padding-left: 3rem;
-  line-height: 1em;
+  line-height: 0.9em;
+  letter-spacing: -1px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 p.header-text {
@@ -102,7 +105,7 @@ p.header-caption {
   font-size: 14px;
   font-weight: 400;
   color: rgba(256,256,256,0.5);
-  letter-spacing: .2rem;
+  letter-spacing: .1rem;
   line-height: 1.5rem;  
   margin:0;
 }
@@ -140,7 +143,7 @@ p.letter-sm {
 
 p.transcription {
   position:absolute;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   font-size:2rem;
   font-weight: 400;
   bottom: -0.5rem;
